// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders correctly with default props 1`] = `
<span
  className="tumbler"
  style={undefined}
>
  <span
    className="baseline"
  >
    <span
      className="shape"
    >
      <input
        checked={undefined}
        className="native"
        defaultChecked={undefined}
        disabled={false}
        id="_teatime1"
        name="control"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
        value="on"
      />
      <label
        className="control"
        htmlFor="_teatime1"
      >
        <span
          className="label"
        >
          On
        </span>
        <span
          className="label"
        >
          Off
        </span>
        <span
          className="delimiter"
        >
           
        </span>
      </label>
    </span>
  </span>
</span>
`;

exports[`Renders correctly with defined props 1`] = `
<span
  className="tumbler outer"
  style={undefined}
>
  <span
    className="baseline"
  >
    <span
      className="shape"
    >
      <input
        checked={true}
        className="native"
        defaultChecked={undefined}
        disabled={true}
        id="controls-id"
        name="control"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
        value="on"
      />
      <label
        className="control"
        htmlFor="controls-id"
      >
        <span
          className="label"
        >
          ~~ON~~
        </span>
        <span
          className="label"
        >
          ~~OFF~~
        </span>
        <span
          className="delimiter"
        >
           
        </span>
      </label>
    </span>
  </span>
</span>
`;
